[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "fastapi[standard]>=0.136.1",
  "pwdlib[argon2]>=0.3.0",
  "pydantic-settings>=2.14.1",
  "sqlmodel>=0.0.38",
  "typer>=0.25.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[project.scripts]
cli = "cli:app"

[tool.setuptools]
packages = ["app"]
py-modules = ["cli"]

[tool.uv]
managed = true
package = true
